[gd_scene load_steps=6 format=2]

[ext_resource path="res://CharacterCard.tscn" type="PackedScene" id=1]
[ext_resource path="res://Data.gd" type="Script" id=2]
[ext_resource path="res://TestSceneChar.gd" type="Script" id=3]
[ext_resource path="res://Fonts/SiweiBlack.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 4 )

[node name="TestSceneChar" type="Node2D"]
script = ExtResource( 3 )

[node name="Data" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 168.0
margin_top = 252.0
margin_right = 348.0
margin_bottom = 518.0
text = "Change Character"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 1082.0
margin_top = 255.0
margin_right = 1262.0
margin_bottom = 521.0
text = "Change Lang"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterCard" parent="." instance=ExtResource( 1 )]
position = Vector2( 719, 438 )

[node name="up" type="Button" parent="."]
margin_left = 608.0
margin_top = 22.0
margin_right = 835.0
margin_bottom = 53.0
text = "Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="Button" parent="."]
margin_left = 621.0
margin_top = 857.0
margin_right = 855.0
margin_bottom = 898.0
text = "Down"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 44.0
margin_top = 44.0
margin_right = 84.0
margin_bottom = 94.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 64.0
margin_top = 737.0
margin_right = 104.0
margin_bottom = 837.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="on_pressed"]
[connection signal="pressed" from="Button2" to="." method="on_pressed2"]
[connection signal="pressed" from="up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_Down_pressed"]
